--- a/div2/index.html
+++ b/div2/index.html
@@ -14,11 +14,11 @@
         }
         .basliq{
             display: flex;
-            justify-content: center;
+            justify-content: ;
             align-items: center;
             height: 50px;
             background-color: beige;
-            text-align: center;
+            text-align: start;
             font-size: 13px;
         }
         .forest{
@@ -35,7 +35,8 @@
             height: 250px;
             width: 250px;
             background-color:rgb(243, 236, 208);
-            margin-top: 30px
+            margin-top: 100px
+            
         }
         .img2{
             display: flex;
